Db updated, Photos, Swagger, Seed
